syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "UserSystem.V1";

package usersystem.v1;

service Users {
  // Get
  rpc GetUser(GetUserRequest) returns (User);
  rpc GetUserExtended(GetUserRequest) returns (UserExtended);

  // Update
  rpc UpdateUser(UpdateUserRequest) returns (UserExtended);

  // Create
  rpc CreateUser(CreateUserRequest) returns (UserExtended);
  rpc CreateUserHashedPassword (CreateUserHashedPasswordRequest) returns (google.protobuf.Empty);

  rpc ToggleUserFavouriteMovie(ToggleUserFavouriteMovieRequest) returns (google.protobuf.Empty);
}

message CreateUserHashedPasswordRequest {
  string hashed_password = 1;
  int32 user_id = 2;
}

message CreateUserRequest {
  string username = 1;
  string name = 2;
  string surname = 3;
  string phone_number = 4;
  string home_number = 5;
  string address = 6;
  google.protobuf.StringValue image_url = 7; 
}

message ToggleUserFavouriteMovieRequest {
  int32 user_id = 1;
  int32 movie_id = 2;
  bool liked = 5;
}

message GetUserRequest {
  oneof identifier {
    int32 id = 1;
    string username = 2;
  }
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string surname = 3;
  string phone_number = 4;
  string home_number = 5;
  string address = 6;
  google.protobuf.StringValue image_url = 7;
}

message User {
  int32 id = 1;
  string username = 2;
  string name = 4;
  string surname = 5;
}

message UserExtended {
  int32 id = 1;
  string username = 2;
  string name = 4;
  string surname = 5;
  string phone_number = 6;
  string home_number = 7;
  string address = 8;
  google.protobuf.StringValue image_url = 9;
  string hashed_password = 10;
}
